--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body id="body">
-    <h1 id="letters">R</h1>
-    <button id="btn-next">Next</button>
+  <body id="container">
+    <label for="colorPicker">Choose a color:</label>
+    <input type="color" id="colorPicker" value="#ff0000" />
+
+    <button id="applyColor">Apply Color</button>
+
     <script src="app.js"></script>
   </body>
 </html>
